[metadata]
license           = Apache License 2.0
license_file      = LICENSE
platforms         = any
description       =
long_description  = file: README.rst
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation

[tool:pytest]
testpaths       = tests
norecursedirs   = .git

[flake8]
exclude         = env,.git,.tox,docs
ignore          = W503
;; W503 = line break before binary operator - black and flake8 disagree
max-line-length = 88

[bdist_wheel]
universal = 0

